--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -10,7 +10,8 @@ mixin servCard(imgSrc, title, par='Хирургическое лечение и 
 		.accordion-group
 			.accordion-header.flex
 				p #{title}
-				span.acc-icon
+				span
+				.acc-icon
 				
 			.accordion-body
 				a(href="").service-link
