--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -4,4 +4,8 @@ $pr:#B9B1A6 ;
 @function remy($pxsize) {
   
 	@return calc(($pxsize/19.2))*1vw;
-  }
+}
+@function remy2($pxsize) {
+  
+	@return calc(($pxsize/4))*1vw;
+}
