--- a/src/pug/sections/doctors/_promo.pug
+++ b/src/pug/sections/doctors/_promo.pug
@@ -5,34 +5,10 @@
 				li
 					a(href="index.html") Newlinedent
 				li
-					a(href="#!") до/после
+					a(href="#!") Команда
 	
 	.container
-		.promo-inner__grid.grid-two-column
-			.promo-inner__title.flex-col
-				h1.h1 Фото работ:<br>до и после
-				p Реальные результаты, которые вдохновляют
-				.promo-inner__btn
-					a(href="#!").btn-primary.sm-100
-						span Записаться на прием 
-						svg.svg-rarr
-							use(href='../img/sprite.svg#svg-rarr')
-			
-			
-			.rotate-img-group
-				.rotate-image.rotate-image1
-					img(src='./img/rotate/5.webp' width='230' height='250' loading='lazy' alt='img')
-					.flex
-						span.img-logo
-						span.img-caption виниры<br>что то там
-				.rotate-image.rotate-image2
-					img(src='./img/rotate/6.webp' width='230' height='250' loading='lazy' alt='img')
-					.flex
-						span.img-logo
-						span.img-caption.img-caption--name Мария 
-				.rotate-image.rotate-image3
-					img(src='./img/rotate/7.webp' width='230' height='250' loading='lazy' alt='img')
-					.flex
-						span.img-logo
-						span.img-caption.img-caption--name Любовь
-		
+		.promo-title
+			h1.title-36 Наши врачи
+			.hide-sm
+				p.txt-16 В нашей клинике работают опытные стоматологи, каждый из которых — эксперт в своей области. Мы заботимся о здоровье ваших зубов с вниманием и профессионализмом, предлагая индивидуальный подход к каждому пациенту. Ваша улыбка в надежных руках!
