--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -120,3 +120,122 @@ form.flex-col{
 	row-gap:16px;
 	&>*{width: 100%;}
 }
+/*custom select*/
+.dropdown {
+	position: relative;
+	width: 100%;
+  }
+  
+  .dropdown__button {
+	position: relative;
+	display: block;
+	width: 100%;
+	border: 1px solid #b9b1a6;
+	border-radius: 24px;
+	padding: 16px 24px;
+	height: 50px;
+	text-align: left;
+	cursor: pointer;
+	z-index: 3;
+	 @media (max-width: 1919px) {
+		// padding: remy(16) remy(24);
+		// height: remy(50);
+	 }
+	 @media (max-width: 767px) {
+		border-radius: 24px;
+		padding: 16px 24px;
+		height: 50px;
+	 }
+  }
+  
+  .dropdown__button::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	right: 8px;
+	transform: translateY(-50%);
+	width: 24px;
+	height: 24px;
+	display: block;
+	// z-index: 2;
+	
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='14' height='8' viewBox='0 0 14 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M0.186392 1.34063L6.5502 7.70426C6.66949 7.82359 6.83138 7.89062 7.00015 7.89062C7.16895 7.89062 7.3308 7.82355 7.45014 7.70421L13.8136 1.34059C14.0621 1.09207 14.0621 0.689167 13.8136 0.440646C13.5651 0.192167 13.1622 0.192125 12.9137 0.440646L7.00015 6.35428L1.08634 0.440646C0.962076 0.316385 0.79921 0.254276 0.636343 0.254276C0.473476 0.254276 0.31061 0.316385 0.186349 0.440688C-0.06213 0.689209 -0.062129 1.09211 0.186392 1.34063Z' fill='%23B9B1A6' /%3e%3c/svg%3e");
+	transition: .3s; 
+	background-size: 16px 10px;
+	background-repeat: no-repeat;
+	background-position: center;
+	pointer-events: none;
+	
+  }
+  .dropdown__button.dropdown__button--active:after{
+	transform: translateY(-50%) rotate(180deg);
+  }
+  
+  .dropdown__list {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 100%;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	list-style-type: none;
+	box-shadow: 1px 2px 8px 0 rgba(45, 109, 202, 0.2);
+	background: #fff;
+	border-radius: 5px;
+	max-height: 150px;
+	overflow: hidden;
+	overflow-y: auto;
+	scrollbar-width: thin;
+	scrollbar-color: #EAEAEA white;
+	z-index: 2;
+	font-weight: 400;
+	font-size: 14px;
+	color: #2f2f2f;
+	&::-webkit-scrollbar{
+		width: 3px;
+		height: 20px;
+		&-track{background-color: #fff;}
+		&-thumb{background-color: #EAEAEA;}
+ 
+	 }
+	
+	ul{
+	  margin-block:10px; 
+	  
+	  overflow: hidden;
+	  overflow-y: auto;
+	  scrollbar-width: thin;
+	  scrollbar-color: #e9e9e9 #fff;
+	  scrollbar-width: 3px;
+	   border-radius: 5px;
+	  
+	  &::-webkit-scrollbar-track {
+		background-color:white;
+		border-radius: 5px;
+	  }
+	}
+	
+ } 
+  
+  .dropdown__list--visible {
+	display: block;
+	
+  }
+  
+  .dropdown__list-item {
+	border-radius: 5px 5px 0 0;
+	padding: 8px 16px;
+	width: 100%;
+	height: 33px;
+	transition: .3s; 
+	cursor: pointer;
+	&:hover{
+		background: #ffe8ee;
+	}
+	
+  }
+  
+  .dropdown__input-hidden {
+	display: none;
+  }
