--- a/src/scss/sections/_before-after.scss
+++ b/src/scss/sections/_before-after.scss
@@ -22,10 +22,14 @@
 			width: remy(1240);
 			height: remy(464);
 		}
+		@media (max-width: 767px) {
+		display: none;
+		}
 	}
 	
 }
-.tabs-content-wrapper.flex{
+.tabs-content-wrapper{
+	display: flex;
 	column-gap:100px;
 	.tabs-content__left{
 		flex-shrink: 0;
@@ -35,12 +39,21 @@
 	@media (max-width: 1919px) {
 		column-gap:remy(100);
 	}
+	@media (max-width: 767px) {
+	flex-direction: column-reverse;
+	row-gap: 30px;
+	padding-top: 40px;
+	&>*{width: 100%;}
+	}
 }
 .tabs-content__right{
 	position: relative;
+	display: flex;
+	flex-direction: column;
 	z-index: 2;
 	.rotate-image__group{
 		display: flex;
+		width: 100%;
 		.rotate-image{
 			flex-shrink: 0;
 			.flex{bottom: 7px;}
@@ -78,11 +91,28 @@
 		.rotate-image2{
 			transform: translate(-6%, -10%) rotate(10.39deg)
 		}
-	}	
+	}
+	.align-right-buttons{
+		margin-top: auto;
+		@media (max-width: 767px) {
+			column-gap:15px;
+			margin-top: 30px;
+			.btn, .btn-primary{
+				padding-left: 20px;
+				padding-right: 20px;
+				
+				flex:1;
+			}
+		}
+	}
+	@media (max-width: 767px) {
+	display: block;
+	}
 }
 .user-card{
 	padding: 25px;
 	padding-top: 0;
+	padding-bottom: 0;
 	background-color: #fff;
 	row-gap:32px;
 	width: 380px;
@@ -117,11 +147,59 @@
 			row-gap: remy(10);
 			
 			.txt-bold{
-				
 				font-size: remy(18);
 				
 			}
 		}
+	}
+	@media (max-width: 767px) {
+		padding: 20px;
+		row-gap:30px;
+		width: 100%;
+		max-width: 400px;
+		&__body{row-gap: 20px;}
+		&__img img{height: 267px}
+		.card__body-group{
+			row-gap: 10px;
+			
+			.txt-bold{
+				font-size: 17px;
+				
+			}
+		}
+	}
+}
+
+.mySwiper{
+	padding-bottom: 20px;
+	.swiper-slide{
+		width: 362px!important;
+		padding-right: 10px;
+		height: 296px;
+		display: flex;
+		.rotate-image{
+			width: 100%;
+			height: 296px;
+			.flex{bottom:7px;}
+			.img-caption--name{
+				font-size: 19px;
+				font-family: var(--second-family);
+			}
+			.img-logo{
+				width: 131px;
+				height: 20px;
+			}
+		}
+		img{
+			width: 100%;
+			height: 253px;
+		}
+	}
+	.mySwiper-nav{
+		justify-content: center;
+		bottom:-16px;
+		position: relative;
+		
 	}
 }
 .user-card, .user-card__body, .user-card .card__body-group{
